--- a/VsiteZavrsniRad/Shared/MainLayout.razor
+++ b/VsiteZavrsniRad/Shared/MainLayout.razor
@@ -1,5 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
+<RadzenDialog/>
+<RadzenNotification/>
+<RadzenContextMenu/>
+<RadzenTooltip/>
+
 <PageTitle>VsiteZavrsniRad</PageTitle>
 
 <div class="page">
