Add main razor components

--- a/VsiteZavrsniRad/Pages/WorkOrders.razor
+++ b/VsiteZavrsniRad/Pages/WorkOrders.razor
@@ -1,8 +1,9 @@
 ﻿@page "/"
+@page "/workOrders"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Radni nalozi</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Radni nalozi</h1>
 
 Welcome to your new app.
 
