--- a/VsiteZavrsniRad/Shared/NavMenu.razor
+++ b/VsiteZavrsniRad/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">VsiteZavrsniRad</a>
+        <a class="navbar-brand" href="">Vsite ERP</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -10,18 +10,26 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="clients" Match="NavLinkMatch.All">
+                <span class="oi oi-people" aria-hidden="true"></span> Klijenti
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="spareParts">
+                <span class="oi oi-cog" aria-hidden="true"></span> Razervni dijelovi
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="workOrders">
+                <span class="oi oi-document" aria-hidden="true"></span> Radni nalozi
+            </NavLink>
+        </div>
+
+        <br/>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="login">
+                <span class="oi oi-power-standby" aria-hidden="true"></span> Odjava
             </NavLink>
         </div>
     </nav>
