Implement create new clients and edit existing clients

--- a/VsiteZavrsniRad/Shared/NavMenu.razor
+++ b/VsiteZavrsniRad/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Vsite ERP</a>
+        <a class="navbar-brand" href="">VsiTe ERP</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -36,6 +36,8 @@
 </div>
 
 @code {
+
+
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
@@ -44,4 +46,5 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
 }
