--- a/VsiteZavrsniRad/_Imports.razor
+++ b/VsiteZavrsniRad/_Imports.razor
@@ -10,6 +10,10 @@
 @using VsiteZavrsniRad
 @using VsiteZavrsniRad.Shared
 @using VsiteZavrsniRad.Models
+@using VsiteZavrsniRad.Database.Repository.Client
+@using VsiteZavrsniRad.Database.Repository.SparePart
+@using VsiteZavrsniRad.Database.Repository.WorkOrder
+
 
 @using Radzen
 @using Radzen.Blazor
