--- a/VsiteZavrsniRad/Pages/WorkOrders.razor
+++ b/VsiteZavrsniRad/Pages/WorkOrders.razor
@@ -1,10 +1,16 @@
 ﻿@page "/"
 @page "/workOrders"
 
+
 <PageTitle>Radni nalozi</PageTitle>
 
 <h1>Radni nalozi</h1>
 
 Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+@code{
+    protected override void OnInitialized()
+    {
+    }
+}
