Add "Odustani" btn in clients component, implement RadzenDataList over foreach

--- a/VsiteZavrsniRad/Pages/Clients/Clients.razor
+++ b/VsiteZavrsniRad/Pages/Clients/Clients.razor
@@ -1,6 +1,7 @@
 ﻿@page "/clients"
 
-@*@inject ClientModel Client;*@
+@inject ClientModel Client;
+@inject DialogService DialogService
 @inject NavigationManager NavigationManager
 
 @inherits OwningComponentBase<IClientRepository>
@@ -8,13 +9,18 @@
 
 <PageTitle>Klijenti</PageTitle>
 
-<NavLink class="btn btn-primary mb-4" href="@CreateNewClient">Novi klijent</NavLink>
+<NavLink href="@CreateNewClient" class="btn mb-4">
+    <RadzenButton Text="Novi klijent" ButtonStyle="ButtonStyle.Secondary" />
+</NavLink>
+
+
+<RadzenButton Text="Open dialog" ButtonStyle="ButtonStyle.Secondary" Click=@OpenOrder />
 
 @if (ClientData?.Count() > 0)
 {
-    foreach (var client in ClientData)
-    {
-        <RadzenCard class="mb-2">
+    <RadzenDataList WrapItems="true" AllowPaging="true" Data="@ClientData" PageSize="5" PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true">
+        <Template Context="client">
+            <RadzenCard class="mb-2">
                 <div class="container">
                     <div class="row">
                         <h3 class="col-lg-3">
@@ -31,9 +37,9 @@
                                     <p class="mb-sm-2 mb-lg-0">@(client.Address)</p>
                                 </div>
                                 @*<div class="col-md-6 col-lg-2 mb-2">
-                                    <label class="mb-0">Adresa</label>
-                                    <p class="mb-sm-2 mb-lg-0">@(client.Address)</p>
-                                </div>*@
+                            <label class="mb-0">Adresa</label>
+                            <p class="mb-sm-2 mb-lg-0">@(client.Address)</p>
+                            </div>*@
                                 <div class="col-md-6 col-lg-5 mb-2">
                                     <b><label class="mb-0">Kontakt</label></b>
                                     <p class="mb-0 mb-lg-0">@(client.ContactPerson)</p>
@@ -41,9 +47,9 @@
 
                                 </div>
                                 @*<div class="col-md-6 col-lg-5 mb-2">
-                                    <label class="mb-0">Telefon</label>
-                                    <p class="mb-sm-2 mb-lg-0">@(client.PhoneNumber)</p>
-                                </div>*@
+                            <label class="mb-0">Telefon</label>
+                            <p class="mb-sm-2 mb-lg-0">@(client.PhoneNumber)</p>
+                            </div>*@
                             </div>
                         </div>
                         <div class="col-lg-2 p-1">
@@ -52,16 +58,15 @@
                         </div>
                     </div>
                 </div>
-    </RadzenCard>
-    }
+            </RadzenCard>
+        </Template>
+    </RadzenDataList>
 }
 
 
 
 @code {
     private IClientRepository Repository => Service;
-
-    public ClientModel? Client { get; set; }
 
     public IEnumerable<ClientModel> ClientData { get; set; } = Enumerable.Empty<ClientModel>();
 
@@ -71,7 +76,7 @@
         await UpdateData();
     }
 
-    
+
     public async Task UpdateData()
     {
         ClientData = await Repository.Clients.ToListAsync();
@@ -81,4 +86,15 @@
     public string CreateNewClient => $"/client/create";
 
     public string EdiContact(int id) => $"/client/edit/{id}";
+
+
+
+    public int orderID = 12345;
+
+    public async Task OpenOrder()
+    {
+        await DialogService.OpenAsync<Clients>($"Order {orderID}", null, null);
+    }
+
+
 }
