Implement spare parts

--- a/VsiteZavrsniRad/Pages/Clients/Clients.razor
+++ b/VsiteZavrsniRad/Pages/Clients/Clients.razor
@@ -6,8 +6,6 @@
 
 @inherits OwningComponentBase<IClientRepository>
 
-@using Dialogs
-
 
 <PageTitle>Klijenti</PageTitle>
 
@@ -91,6 +89,7 @@
 
 
 
+    // RadzenDialog Demo
     public int orderID = 12345;
 
     public async Task OpenOrder()
