--- a/VsiteZavrsniRad/Pages/Clients/Clients.razor
+++ b/VsiteZavrsniRad/Pages/Clients/Clients.razor
@@ -14,7 +14,7 @@
 </NavLink>
 
 
-<RadzenButton Text="Open dialog" ButtonStyle="ButtonStyle.Secondary" Click=@OpenOrder />
+@*<RadzenButton Text="Open dialog" ButtonStyle="ButtonStyle.Secondary" Click=@OpenOrder />*@
 
 @if (ClientData?.Count() > 0)
 {
@@ -36,24 +36,15 @@
                                     <p class="mb-0 mb-lg-0">@(client.City)</p>
                                     <p class="mb-sm-2 mb-lg-0">@(client.Address)</p>
                                 </div>
-                                @*<div class="col-md-6 col-lg-2 mb-2">
-                            <label class="mb-0">Adresa</label>
-                            <p class="mb-sm-2 mb-lg-0">@(client.Address)</p>
-                            </div>*@
                                 <div class="col-md-6 col-lg-5 mb-2">
                                     <b><label class="mb-0">Kontakt</label></b>
                                     <p class="mb-0 mb-lg-0">@(client.ContactPerson)</p>
                                     <p class="mb-sm-2 mb-lg-0">@(client.PhoneNumber)</p>
 
                                 </div>
-                                @*<div class="col-md-6 col-lg-5 mb-2">
-                            <label class="mb-0">Telefon</label>
-                            <p class="mb-sm-2 mb-lg-0">@(client.PhoneNumber)</p>
-                            </div>*@
                             </div>
                         </div>
                         <div class="col-lg-2 p-1">
-                            @*<button @onclick="EditClient" class="btn btn-warning w-50">Uredi</button>*@
                             <NavLink class="btn btn-warning" href="@EdiContact(client.Id)">Uredi</NavLink>
                         </div>
                     </div>
@@ -61,6 +52,9 @@
             </RadzenCard>
         </Template>
     </RadzenDataList>
+} else
+{
+    <p>Učitavanje podataka...</p>
 }
 
 
@@ -90,12 +84,12 @@
 
 
     // RadzenDialog Demo
-    public int orderID = 12345;
+    //public int orderID = 12345;
 
-    public async Task OpenOrder()
-    {
-        await DialogService.OpenAsync<Clients>($"Order {orderID}", null, null);
-    }
+    //public async Task OpenOrder()
+    //{
+    //    await DialogService.OpenAsync<Clients>($"Order {orderID}", null, null);
+    //}
 
 
 }
