--- a/VsiteZavrsniRad/Pages/Clients/Clients.razor
+++ b/VsiteZavrsniRad/Pages/Clients/Clients.razor
@@ -16,64 +16,56 @@
 
 <RadzenButton Text="Open dialog" ButtonStyle="ButtonStyle.Secondary" Click=@OpenOrder />
 
-@if (ClientData?.Count() > 0)
-{
-    <RadzenDataList WrapItems="true" AllowPaging="true" Data="@ClientData" PageSize="5" PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true">
-        <Template Context="client">
-            <RadzenCard class="mb-2">
-                <div class="container">
-                    <div class="row">
-                        <h3 class="col-lg-3">
-                            @(client.CompanyName)
-                        </h3>
-                        <div class="col-lg-7">
-                            <div class="row d-flex">
-                                <div class="col-md-6 col-lg-2 mb-2">
-                                    <b><p class="mb-sm-2 mb-lg-0">@(client.TaxNumber)</p></b>
-                                </div>
-                                <div class="col-md-6 col-lg-5 mb-2">
-                                    <b><label class="mb-0">Adresa</label></b>
-                                    <p class="mb-0 mb-lg-0">@(client.City)</p>
-                                    <p class="mb-sm-2 mb-lg-0">@(client.Address)</p>
-                                </div>
-                                @*<div class="col-md-6 col-lg-2 mb-2">
-                            <label class="mb-0">Adresa</label>
-                            <p class="mb-sm-2 mb-lg-0">@(client.Address)</p>
-                            </div>*@
-                                <div class="col-md-6 col-lg-5 mb-2">
-                                    <b><label class="mb-0">Kontakt</label></b>
-                                    <p class="mb-0 mb-lg-0">@(client.ContactPerson)</p>
-                                    <p class="mb-sm-2 mb-lg-0">@(client.PhoneNumber)</p>
 
-                                </div>
-                                @*<div class="col-md-6 col-lg-5 mb-2">
-                            <label class="mb-0">Telefon</label>
-                            <p class="mb-sm-2 mb-lg-0">@(client.PhoneNumber)</p>
-                            </div>*@
-                            </div>
-                        </div>
-                        <div class="col-lg-2 p-1">
-                            @*<button @onclick="EditClient" class="btn btn-warning w-50">Uredi</button>*@
-                            <NavLink class="btn btn-warning" href="@EdiContact(client.Id)">Uredi</NavLink>
-                        </div>
-                    </div>
-                </div>
-            </RadzenCard>
-        </Template>
-    </RadzenDataList>
-}
+<table class="table table-striped table-bordered table-sm">
+    <thead>
+        <tr>
+            <th scope="col">Rb.</th>
+            <th scope="col">Tvrtka</th>
+            <th scope="col">OIB</th>
+            <th scope="col">Grad</th>
+            <th scope="col">Adresa</th>
+            <th scope="col">Kontakt</th>
+            <th scope="col">Telefon</th>
+            <th scope="col"></th>
+        </tr>
+    </thead>
+    <tbody>
+        @if (ClientData?.Count() > 0)
+        {
+            foreach (var client in ClientData)
+            {
+                orderNumber++;
+                <tr>
+                    <td>@orderNumber</td>
+                    <td>@client.CompanyName</td>
+                    <td>@client.TaxNumber</td>
+                    <td>@client.City</td>
+                    <td>@client.Address</td>
+                    <td>@client.ContactPerson</td>
+                    <td>@client.PhoneNumber</td>
+                    <td class="text-center"><NavLink class="btn btn-warning" href="@EditContact(client.Id)">Uredi</NavLink></td>
+                </tr>
+            }
+        }
+    </tbody>
+</table>
 
 
 
 @code {
-    private IClientRepository Repository => Service;
 
+    private int orderNumber;
+    private IClientRepository Repository => Service;
     public IEnumerable<ClientModel> ClientData { get; set; } = Enumerable.Empty<ClientModel>();
+
 
 
     protected async override Task OnInitializedAsync()
     {
         await UpdateData();
+        orderNumber = 0;
+
     }
 
 
@@ -85,7 +77,7 @@
 
     public string CreateNewClient => $"/client/create";
 
-    public string EdiContact(int id) => $"/client/edit/{id}";
+    public string EditContact(int id) => $"/client/edit/{id}";
 
 
 
