--- a/VsiteZavrsniRad/wwwroot/css/site.css
+++ b/VsiteZavrsniRad/wwwroot/css/site.css
@@ -59,6 +59,16 @@ a, .btn-link {
     color: white;
 }
 
-    .blazor-error-boundary::after {
-        content: "An error has occurred."
-    }
+.blazor-error-boundary::after {
+    content: "An error has occurred."
+}
+
+
+
+
+
+/************* Custom CSS *************/
+.btn-create {
+    text-align: start;
+    padding: 0;
+}
