--- a/VsiteZavrsniRad/Pages/Clients/Clients.razor
+++ b/VsiteZavrsniRad/Pages/Clients/Clients.razor
@@ -9,47 +9,47 @@
 
 <PageTitle>Klijenti</PageTitle>
 
-<NavLink href="@CreateNewClient" class="btn mb-4">
-    <RadzenButton Text="Novi klijent" ButtonStyle="ButtonStyle.Secondary" />
-</NavLink>
-
 
 @*<RadzenButton Text="Open dialog" ButtonStyle="ButtonStyle.Secondary" Click=@OpenOrder />*@
 
-
-<table class="table table-striped table-bordered table-sm">
-    <thead>
-        <tr>
-            <th scope="col">Rb.</th>
-            <th scope="col">Tvrtka</th>
-            <th scope="col">OIB</th>
-            <th scope="col">Grad</th>
-            <th scope="col">Adresa</th>
-            <th scope="col">Kontakt</th>
-            <th scope="col">Telefon</th>
-            <th scope="col"></th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (ClientData?.Count() > 0)
-        {
-            foreach (var client in ClientData)
+<RadzenCard>
+    <NavLink href="@CreateNewClient" class="btn mb-4 btn-create">
+        <RadzenButton Text="Novi klijent" ButtonStyle="ButtonStyle.Secondary" />
+    </NavLink>
+    <table class="table table-striped table-bordered table-sm">
+        <thead>
+            <tr>
+                <th scope="col">Rb.</th>
+                <th scope="col">Tvrtka</th>
+                <th scope="col">OIB</th>
+                <th scope="col">Grad</th>
+                <th scope="col">Adresa</th>
+                <th scope="col">Kontakt</th>
+                <th scope="col">Telefon</th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @if (ClientData?.Count() > 0)
             {
-                orderNumber++;
-                <tr>
-                    <td>@orderNumber</td>
-                    <td>@client.CompanyName</td>
-                    <td>@client.TaxNumber</td>
-                    <td>@client.City</td>
-                    <td>@client.Address</td>
-                    <td>@client.ContactPerson</td>
-                    <td>@client.PhoneNumber</td>
-                    <td class="text-center"><NavLink class="btn btn-warning" href="@EditContact(client.Id)">Uredi</NavLink></td>
-                </tr>
+                foreach (var client in ClientData)
+                {
+                    orderNumber++;
+                    <tr>
+                        <td>@orderNumber</td>
+                        <td>@client.CompanyName</td>
+                        <td>@client.TaxNumber</td>
+                        <td>@client.City</td>
+                        <td>@client.Address</td>
+                        <td>@client.ContactPerson</td>
+                        <td>@client.PhoneNumber</td>
+                        <td class="text-center"><NavLink class="btn btn-warning" href="@EditContact(client.Id)">Uredi</NavLink></td>
+                    </tr>
+                }
             }
-        }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</RadzenCard>
 
 
 
@@ -58,7 +58,6 @@
     private int orderNumber;
     private IClientRepository Repository => Service;
     public IEnumerable<ClientModel> ClientData { get; set; } = Enumerable.Empty<ClientModel>();
-
 
 
     protected async override Task OnInitializedAsync()
@@ -76,7 +75,6 @@
 
 
     public string CreateNewClient => $"/client/create";
-
     public string EditContact(int id) => $"/client/edit/{id}";
 
 
