--- a/VsiteZavrsniRad/_Imports.razor
+++ b/VsiteZavrsniRad/_Imports.razor
@@ -13,7 +13,11 @@
 @using VsiteZavrsniRad.Database.Repository.Client
 @using VsiteZavrsniRad.Database.Repository.SparePart
 @using VsiteZavrsniRad.Database.Repository.WorkOrder
-
+@using VsiteZavrsniRad.Pages.Clients
+@using VsiteZavrsniRad.Pages.SpareParts
+@using VsiteZavrsniRad.Pages.WorkOrders
+@using VsiteZavrsniRad.Utils
+@using VsiteZavrsniRad.Pages.Dialogs
 
 @using Radzen
 @using Radzen.Blazor
