--- a/VsiteZavrsniRad/Pages/SpareParts/SparePartCreateEdit.razor
+++ b/VsiteZavrsniRad/Pages/SpareParts/SparePartCreateEdit.razor
@@ -31,6 +31,11 @@
             <RadzenNumeric ShowUpDown="false" @bind-Value="SparePart.Quantity" class="mb-4" disabled="@isQuantityDisabled"/>
         </div>
 
+        <div class="form-group row mb-4">
+            <label>Jedinica mjere</label>
+            <RadzenDropDown AllowClear="true" TValue="string" Data=@UnitOfMeasure.UnitOfMeasureList @bind-Value="SparePart.UnitOfMeasure" Placeholder="Odaberi jedinicu mjere..." />
+        </div>
+
         <div class="form-group row">
             <label>Cijena VPC</label>
             <RadzenNumeric ShowUpDown="false" @bind-Value="SparePart.PriceWithoutVAT" class="mb-4" />
