--- a/VsiteZavrsniRad/Pages/Clients/ClientCreateEdit.razor
+++ b/VsiteZavrsniRad/Pages/Clients/ClientCreateEdit.razor
@@ -11,14 +11,14 @@
 <PageTitle>@pageTitle</PageTitle>
 
 <RadzenCard>
-    <h2 hidden="@isFormTitleHidden"><b>@Client.CompanyName</b></h2>
+    <h2 hidden="@isFormTitleHidden"><b>@Client.ClientName</b></h2>
     <EditForm Model="@Client" OnValidSubmit="SaveClient" class="w-100">
         <DataAnnotationsValidator />
         <ValidationSummary />
 
         <div class="form-group row">
-            <label>Ime tvrtke</label>
-            <RadzenTextBox @bind-Value="Client.CompanyName" class="mb-4" />
+            <label>Ime klijenta</label>
+            <RadzenTextBox @bind-Value="Client.ClientName" class="mb-4" />
         </div>
 
         <div class="form-group row">
@@ -57,6 +57,7 @@
 
 @code {
     public IClientRepository Repository => Service;
+    public IEnumerable<ClientModel> ClientData { get; set; } = Enumerable.Empty<ClientModel>();
 
     [Parameter]
     public int Id { get; set; } = 0;
@@ -69,6 +70,9 @@
     protected override void OnParametersSet()
     {
         Client = Repository.Clients.FirstOrDefault(c => c.Id == Id) ?? new();
+        ClientData = Repository.Clients.ToList();
+
+        Client.ClientNumber = (ClientData.Count() + 1).ToString();
 
         if (Id != 0)
         {
