--- a/VsiteZavrsniRad/Pages/Clients/Clients.razor
+++ b/VsiteZavrsniRad/Pages/Clients/Clients.razor
@@ -9,9 +9,6 @@
 
 <PageTitle>Klijenti</PageTitle>
 
-
-@*<RadzenButton Text="Open dialog" ButtonStyle="ButtonStyle.Secondary" Click=@OpenOrder />*@
-
 <RadzenCard>
     <NavLink href="@CreateNewClient" class="btn mb-4 btn-create">
         <RadzenButton Text="Novi klijent" ButtonStyle="ButtonStyle.Secondary" />
@@ -20,7 +17,7 @@
         <thead>
             <tr>
                 <th scope="col">Rb.</th>
-                <th scope="col">Tvrtka</th>
+                <th scope="col">Klijent</th>
                 <th scope="col">OIB</th>
                 <th scope="col">Grad</th>
                 <th scope="col">Adresa</th>
@@ -34,10 +31,9 @@
             {
                 foreach (var client in ClientData)
                 {
-                    orderNumber++;
-                    <tr>
-                        <td>@orderNumber</td>
-                        <td>@client.CompanyName</td>
+                    <tr class="align-middle">
+                        <td>@client.ClientNumber</td>
+                        <td>@client.ClientName</td>
                         <td>@client.TaxNumber</td>
                         <td>@client.City</td>
                         <td>@client.Address</td>
@@ -63,8 +59,6 @@
     protected async override Task OnInitializedAsync()
     {
         await UpdateData();
-        orderNumber = 0;
-
     }
 
 
@@ -76,16 +70,5 @@
 
     public string CreateNewClient => $"/client/create";
     public string EditContact(int id) => $"/client/edit/{id}";
-
-
-
-    // RadzenDialog Demo
-    //public int orderID = 12345;
-
-    //public async Task OpenOrder()
-    //{
-    //    await DialogService.OpenAsync<Clients>($"Order {orderID}", null, null);
-    //}
-
 
 }
